--- a/research/index.html
+++ b/research/index.html
@@ -98,7 +98,7 @@
   <li>
     <p><strong>Phase response curves and the role of coordinates</strong>.<br />
  Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
- (2024). Biological Cybernetics, 118 (2024), pp.~311–330. (<a href="https://doi.org/10.1007/s00422-024-00997-w"><u>article</u></a>, <a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
+ (2024). Biological Cybernetics, 118 (2024), pp. 311–330. (<a href="https://doi.org/10.1007/s00422-024-00997-w"><u>article</u></a>, <a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
@@ -164,13 +164,13 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
   <li>
     <p><strong>Relationships between necessary conditions for feedback stabilizability</strong>.<br />
   Matthew D. Kvalheim.<br />
-  Proceedings of the 2023 BIRS Workshop on Geometry, Topology and Control System Design, Accepted (2025)). (<a href="https://arxiv.org/abs/2312.16752"><u>arXiv</u></a>)</p>
+  Proceedings of the 2023 BIRS Workshop on Geometry, Topology and Control System Design, Accepted (2025). (<a href="https://arxiv.org/abs/2312.16752"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>The role of symmetry in constructing geometric flat outputs for
   free-flying robotic systems</strong>.<br />
   Jake Welde, Matthew D. Kvalheim, and Vijay Kumar.<br />
-  IEEE International Conference on Robotics and Automation, Accepted (2023). (<a href="https://arxiv.org/abs/2209.11869"><u>arXiv</u></a>)</p>
+  IEEE International Conference on Robotics and Automation (2023), pp. 12247–12253. (<a href="https://doi.org/10.1109/ICRA48891.2023.10160628"><u>article</u></a>, <a href="https://arxiv.org/abs/2209.11869"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Generic properties of Koopman eigenfunctions for stable fixed points and periodic orbits</strong>.<br />
