--- a/research/index.html
+++ b/research/index.html
@@ -88,7 +88,7 @@
   <li>
     <p><strong>Estimating phase from observed trajectories using the temporal 1-form</strong>.<br />
   Simon Wilshin, Matthew D. Kvalheim, Clayton Scott, and Shai Revzen.<br />
-  Neural Computation, Accepted (2025). (<a href="https://arxiv.org/abs/2203.04498"><u>arXiv</u></a>)</p>
+  Neural Computation, Accepted (2025). (very outdated <a href="https://arxiv.org/abs/2203.04498"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Global linearization of asymptotically stable systems without hyperbolicity</strong>.<br />
@@ -103,7 +103,7 @@
   <li>
     <p><strong>Phase response curves and the role of coordinates</strong>.<br />
  Simon Wilshin, Matthew D. Kvalheim, and Shai Revzen.<br />
- (2024). Biological Cybernetics, 118 (2024), pp.~311–330. (<a href="https://doi.org/10.1007/s00422-024-00997-w"><u>article</u></a>, <a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
+ (2024). Biological Cybernetics, 118 (2024), pp.~311–330. (<a href="https://doi.org/10.1007/s00422-024-00997-w"><u>article</u></a>, very outdated <a href="https://arxiv.org/abs/2111.06511"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>Flux in tilted potential systems: negative resistance and persistence</strong>.<br />
@@ -169,7 +169,7 @@ Nonlinearity, 31.9 (2018), pp. 4202-4245. (<a href="http://iopscience.iop.org/ar
   <li>
     <p><strong>Relationships between necessary conditions for feedback stabilizability</strong>.<br />
   Matthew D. Kvalheim.<br />
-  Proceedings of the 2023 BIRS Workshop on Geometry, Topology and Control System Design, Accepted (2025)). (<a href="https://arxiv.org/abs/2312.16752"><u>arXiv</u></a>)</p>
+  Proceedings of the 2023 BIRS Workshop on Geometry, Topology and Control System Design, Accepted (2025). (<a href="https://arxiv.org/abs/2312.16752"><u>arXiv</u></a>)</p>
   </li>
   <li>
     <p><strong>The role of symmetry in constructing geometric flat outputs for
