--- a/research/index.html
+++ b/research/index.html
@@ -77,7 +77,7 @@
 
 <hr />
 
-<p>Research interests: dynamical systems, control theory, differential topology, and applications.<!--, from a geometric-topological point of view.--><!--, with a focus on asymptotic stability and feedback stabilization.--></p>
+<p>Interests: dynamical systems, control theory, differential topology, and applications.<!--, from a geometric-topological point of view.--><!--, with a focus on asymptotic stability and feedback stabilization.--></p>
 
 <!--These interests have intersected with the following topics in my work: feedback stabilization, Koopman operator theory, data-driven algorithms, closed one-forms in dynamics, Morse/Conley theory, stochastic processes and topology, invariant manifolds, bifurcations, differential flatness, geometric mechanics, hybrid systems, and autoencoders.-->
 
@@ -208,7 +208,7 @@ Bioinspired legged locomotion, Ch. 3.5, Butterworth-Heinemann, Elsevier, Oxford 
 </ul>
 
 <hr />
-<h2 id="papers-under-review-and-selected-other-preprints">Papers under review and selected other preprints:</h2>
+<h2 id="selected-preprints">Selected preprints:</h2>
 <ul>
   <li>
     <p><strong>Differential topology of the spaces of asymptotically stable vector fields and Lyapunov functions</strong>.<br />
